--- a/templates/Profile/banner.html.twig
+++ b/templates/Profile/banner.html.twig
@@ -1,13 +1,14 @@
+{% set bannerUrl = pictures_cdn ~ '/banner/' ~ user.id ~ '.png' %}
 <img
-    src="{{ asset('images/banners/' ~ user.id ~ '.png') }}"
-    alt="Banner {{ user.displayName }}"
+    src="{{ bannerUrl }}"
+    alt="{{ user.displayName }} stats"
     class="img-responsive"
 />
 <div class="col-sm-12 text-right">
   <ul class="list-inline no-margin-bottom">
     <li>
-      {% set bbcode = '[url='~ absolute_url(path('user_profile', {'id': user.id})) ~'][img]'~ absolute_url(asset('images/banners/' ~ user.id ~ '.png')) ~'[/img][/url]' %}
-      {% set htmlcode = '<a href="'~ absolute_url(path('user_profile', {'id': user.id})) ~'"><img src="'~ absolute_url(asset('images/banners/' ~ user.id ~ '.png')) ~'"/></a>' %}
+      {% set bbcode = '[url='~ absolute_url(path('user_profile', {'id': user.id})) ~'][img]' ~ bannerUrl ~ '[/img][/url]' %}
+      {% set htmlcode = '<a href="'~ absolute_url(path('user_profile', {'id': user.id})) ~'"><img src="' ~ bannerUrl ~ '"/></a>' %}
       <a onclick="copy(this);" class="btn btn-link" data-copy="{{ bbcode }}">
         <i class="icon-copy position-left"></i>
         {{ 'me.banner.getbbcode'|trans }}
