--- a/templates/Profile/me.html.twig
+++ b/templates/Profile/me.html.twig
@@ -6,43 +6,6 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block body %}
-  <style>
-    .lds-ripple {
-      display: inline-block;
-      position: relative;
-      width: 64px;
-      height: 64px;
-    }
-
-    .lds-ripple div {
-      position: absolute;
-      border: 4px solid #000;
-      opacity: 1;
-      border-radius: 50%;
-      animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
-    }
-
-    .lds-ripple div:nth-child(2) {
-      animation-delay: -0.5s;
-    }
-
-    @keyframes lds-ripple {
-      0% {
-        top: 28px;
-        left: 28px;
-        width: 0;
-        height: 0;
-        opacity: 1;
-      }
-      100% {
-        top: -1px;
-        left: -1px;
-        width: 58px;
-        height: 58px;
-        opacity: 0;
-      }
-    }
-  </style>
   <div class="row">
     <div class="col-sm-3">
       <div class="row">
@@ -153,11 +116,7 @@
                 <small class="display-block">{{ 'me.banner.text'|trans }}</small>
               </h4>
               <div id="my-banner" class="text-center content-group">
-                {# loader css #}
-                <div class="lds-ripple">
-                  <div></div>
-                  <div></div>
-                </div>
+                  {% include 'Profile/banner.html.twig' with {'user': user} only %}
               </div>
             </div>
           </div>
