[#128] - Change displayName field to TextType

--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -83,7 +83,7 @@
         <li class="dropdown dropdown-user">
           <a class="dropdown-toggle" data-toggle="dropdown">
             {{ helper.profilePicture(app.user, 'img-circle img-xs') }}
-            <span>{{ app.user.firstname }}</span>
+              <span>{{ app.user.displayName }}</span>
             <i class="caret"></i>
           </a>
 
