add recaptcha on register action

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -23,6 +23,7 @@
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.firstName) }}
         {{ form_row(registrationForm.lastName) }}
+        {{ form_widget(registrationForm.recaptcha) }}
 
         {{ form_end(registrationForm) }}
 
