[#149] - Add coaster's former names field in admin and display them on coaster page

--- a/templates/Coaster/show.html.twig
+++ b/templates/Coaster/show.html.twig
@@ -286,6 +286,15 @@
                             </div>
                         </div>
                     {% endif %}
+                    {% if coaster.formerNames %}
+                        <div class="list-group-item">
+                            <label class="control-label no-margin text-semibold">{{ 'coaster.infos.formerNames'|trans }}
+                                :</label>
+                            <div class="pull-right">
+                                {{ coaster.formerNames|join(', ') }}
+                            </div>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
             {% if coaster.youtubeId %}
