--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -97,7 +97,7 @@
     return Bloodhound.tokenizers.nonword(normalized);
   };
   var dataSource = new Bloodhound({
-    datumTokenizer: Bloodhound.tokenizers.obj.nonword('no'),
+    datumTokenizer: Bloodhound.tokenizers.obj.nonword('normalize'),
     queryTokenizer: queryTokenizer,
     prefetch: {
       url: Routing.generate('ajax_main_search', {'_locale': '{{ app.request.locale }}'}),
@@ -105,8 +105,8 @@
       ttl: 600000,
       transform: function (obj) {
         return obj.map(
-          function (x) {
-            return {no: normalize(x.n), n: x.n, r: x.r, s: x.s}
+          function (result) {
+            return {normalize: normalize(result.names), display: result.display, route: result.route, slug: result.slug}
           }
         )
       }
@@ -118,13 +118,13 @@
         hint: true,
         autoselect: true,
       }, {
-        display: 'n',
+        display: 'display',
         source: dataSource.ttAdapter(),
         limit: 7,
       }).bind('typeahead:select', function(ev, suggestion) {
     window.location.href = Routing.generate(
-        suggestion.r,
-        {'slug': suggestion.s, '_locale': '{{ app.request.locale }}'},
+        suggestion.route,
+        {'slug': suggestion.slug, '_locale': '{{ app.request.locale }}'},
     );
   });
 </script>
