--- a/templates/Includes/list_reviews.html.twig
+++ b/templates/Includes/list_reviews.html.twig
@@ -4,7 +4,7 @@
   <div class="panel-body">
     <ul class="media-list stack-media-on-mobile">
       {% for review in reviews %}
-        <li class="media">
+        <li class="media" data-controller="review-actions" data-review-actions-id-value="{{ review.id }}" data-review-actions-upvoted-value="false">
           <div class="media-left">
             {{ helper.profilePicture(review.user) }}
           </div>
@@ -27,6 +27,57 @@
               <span class="media-annotation dotted">
                 {{ review.updatedAt|ago }}
               </span>
+              
+              {% if is_granted('ROLE_USER') %}
+                <div class="pull-right">
+                  <button type="button" class="btn btn-link btn-xs"
+                          data-review-actions-target="upvoteButton"
+                          data-action="review-actions#upvote"
+                          title="{{ 'review.upvote'|trans }}">
+                    <i class="icon-arrow-up5"></i>
+                    <span data-review-actions-target="upvoteCount">{{ review.upvotes|length }}</span>
+                  </button>
+                  
+                  <button type="button" class="btn btn-danger btn-xs"
+                          data-review-actions-target="reportButton"
+                          data-action="review-actions#openReportModal"
+                          title="{{ 'review.report'|trans }}">
+                    <i class="icon-flag"></i> {{ 'review.report'|trans }}
+                  </button>
+                </div>
+                
+                <!-- Report Modal -->
+                <div id="reportModal-{{ review.id }}" class="modal fade" data-review-actions-target="reportModal">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h5 class="modal-title">{{ 'review.report_title'|trans }}</h5>
+                      </div>
+                      
+                      <form data-action="review-actions#submitReport">
+                        <div class="modal-body">
+                          <div class="form-group">
+                            <label>{{ 'review.report_reason'|trans }}</label>
+                            <select name="reason" class="form-control">
+                              <option value="offensive">{{ 'review.reason.offensive'|trans }}</option>
+                              <option value="inappropriate">{{ 'review.reason.inappropriate'|trans }}</option>
+                              <option value="incorrect">{{ 'review.reason.incorrect'|trans }}</option>
+                              <option value="spam">{{ 'review.reason.spam'|trans }}</option>
+                              <option value="other">{{ 'review.reason.other'|trans }}</option>
+                            </select>
+                          </div>
+                        </div>
+                        
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-link" data-dismiss="modal">{{ 'review.cancel'|trans }}</button>
+                          <button type="submit" class="btn btn-primary">{{ 'review.submit_report'|trans }}</button>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              {% endif %}
             </div>
             {% if review.pros|length > 0 or review.cons|length > 0 %}
               <p>
