[#162] - Fix user's reviews list template

--- a/templates/User/list_reviews.html.twig
+++ b/templates/User/list_reviews.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% set title = 'users.reviews.title'|trans %}
+{% set title = 'users.reviews.title'|trans({'%name%': user.displayName}) %}
 {% block title %}{{ title }}{% endblock %}
 
 {% block body %}
