--- a/templates/Profile/me.html.twig
+++ b/templates/Profile/me.html.twig
@@ -73,6 +73,9 @@
               <div class="form-group">
               {{ form_row(form.homePark) }}
             </div>
+              <div class="form-group">
+                  {{ form_row(form.displayReviewsInAllLanguages) }}
+              </div>
             <div class="form-group">
               {{ form_row(form.addTodayDateWhenRating) }}
             </div>
