feat: Implement review reporting and upvoting functionality
- Added ReviewReport entity and CRUD controller for managing review reports in the admin dashboard.
- Updated DashboardController to include a link to the Review Reports section.
- Enhanced ReviewCrudController to disable the creation of new reviews.
- Introduced new JavaScript functionality for handling upvotes and report actions on reviews.
- Created a new template for rendering review items with upvote and report options.
- Updated translations for review reporting and upvoting messages in multiple languages.
- Refactored review display templates to improve layout and usability.
- Added new CSS classes for better styling of review components.
- Updated Webpack configuration to include new JavaScript entry for translator functionality.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ app.request.get('_locale') }}">
+<html lang="{{ app.request.get('_locale') }}" data-symfony-ux-translator-locale="{{ app.request.locale }}">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -46,6 +46,7 @@
         <!-- Content area -->
         <div class="content">
           {{ include('flashes.html.twig') }}
+          <div id="notifications" data-controller="notification" data-notification-target="container"></div>
 
           {% block body %}{% endblock %}
 
@@ -72,6 +73,8 @@
 <script type="text/javascript" src="{{ asset('js/plugins/typeahead/typeahead.bundle.min.js') }}"></script>
 <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
 <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
+<!-- Symfony UX Translator -->
+{{ encore_entry_script_tags('translator') }}
 <script type="text/javascript">
   // used for rating
   var locale = '{{ app.request.locale }}';
