--- a/templates/Includes/list_reviews.html.twig
+++ b/templates/Includes/list_reviews.html.twig
@@ -1,110 +1,39 @@
-{% import "helper.html.twig" as helper %}
-
 <div class="panel panel-flat">
-  <div class="panel-body">
-    <ul class="media-list stack-media-on-mobile">
-      {% for review in reviews %}
-        <li class="media" data-controller="review-actions" data-review-actions-id-value="{{ review.id }}" data-review-actions-upvoted-value="false">
-          <div class="media-left">
-            {{ helper.profilePicture(review.user) }}
-          </div>
+  <div class="panel-heading">
+    <h6 class="panel-title text-semibold">
+      <i class="icon-bubble-lines4 position-left"></i>
+      {{ 'review.title'|trans }}
+    </h6>
+    <div class="heading-elements">
+      <ul class="icons-list">
+        <li><a data-action="collapse"></a></li>
+      </ul>
+    </div>
+  </div>
 
-          <div class="media-body">
-            <div class="media-heading">
-              <h6 class="media-heading">
-                  <a href="{{ path('show_coaster', {'id': review.coaster.id, 'slug': review.coaster.slug}) }}">
-                  {{ review.coaster.name }}
-                </a>
-                -
-                <a href="{{ path('park_show', {'slug': review.coaster.park.slug}) }}">
-                  {{ review.coaster.park.name }}
-                </a>
-              </h6>
-              <a href="{{ path('user_show', {'slug': review.user.slug}) }}">
-                {{ review.user.displayName }}
+  <div class="panel-body">
+    <ul class="media-list media-list-bordered">
+      {% for review in reviews %}
+        <li class="media">
+          <div class="media-heading">
+            <h6 class="text-semibold">
+              <a href="{{ path('show_coaster', {'id': review.coaster.id, 'slug': review.coaster.slug}) }}">
+                {{ review.coaster.name }}
               </a>
-              {{ helper.starRating(review.value) }}
-              <span class="media-annotation dotted">
-                {{ review.updatedAt|ago }}
-              </span>
-              
-              {% if is_granted('ROLE_USER') %}
-                <div class="pull-right">
-                  <button type="button" class="btn btn-link btn-xs"
-                          data-review-actions-target="upvoteButton"
-                          data-action="review-actions#upvote"
-                          title="{{ 'review.upvote'|trans }}">
-                    <i class="icon-arrow-up5"></i>
-                    <span data-review-actions-target="upvoteCount">{{ review.upvotes|length }}</span>
-                  </button>
-                  
-                  <button type="button" class="btn btn-danger btn-xs"
-                          data-review-actions-target="reportButton"
-                          data-action="review-actions#openReportModal"
-                          title="{{ 'review.report'|trans }}">
-                    <i class="icon-flag"></i> {{ 'review.report'|trans }}
-                  </button>
-                </div>
-                
-                <!-- Report Modal -->
-                <div id="reportModal-{{ review.id }}" class="modal fade" data-review-actions-target="reportModal">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h5 class="modal-title">{{ 'review.report_title'|trans }}</h5>
-                      </div>
-                      
-                      <form data-action="review-actions#submitReport">
-                        <div class="modal-body">
-                          <div class="form-group">
-                            <label>{{ 'review.report_reason'|trans }}</label>
-                            <select name="reason" class="form-control">
-                              <option value="offensive">{{ 'review.reason.offensive'|trans }}</option>
-                              <option value="inappropriate">{{ 'review.reason.inappropriate'|trans }}</option>
-                              <option value="incorrect">{{ 'review.reason.incorrect'|trans }}</option>
-                              <option value="spam">{{ 'review.reason.spam'|trans }}</option>
-                              <option value="other">{{ 'review.reason.other'|trans }}</option>
-                            </select>
-                          </div>
-                        </div>
-                        
-                        <div class="modal-footer">
-                          <button type="button" class="btn btn-link" data-dismiss="modal">{{ 'review.cancel'|trans }}</button>
-                          <button type="submit" class="btn btn-primary">{{ 'review.submit_report'|trans }}</button>
-                        </div>
-                      </form>
-                    </div>
-                  </div>
-                </div>
-              {% endif %}
-            </div>
-            {% if review.pros|length > 0 or review.cons|length > 0 %}
-              <p>
-                {% for pros in review.pros %}
-                  <span class="label label-success label-rounded mb-5">{{ pros.name|trans([], 'database') }}</span>
-                {% endfor %}
-                {% for cons in review.cons %}
-                  <span class="label label-danger label-rounded mb-5">{{ cons.name|trans([], 'database') }}</span>
-                {% endfor %}
-              </p>
-            {% endif %}
-            {% if review.review %}
-              <p>{{ review.review }}</p>
-            {% endif %}
-            {% if is_granted('update', review) %}
-              <ul class="list-inline list-inline-separate text-size-small">
-                <li>
-                  <a href="{{ path('review_form', {'id': review.coaster.id}) }}">
-                    {{ 'review.update'|trans }}
-                  </a>
-                </li>
-              </ul>
-            {% endif %}
+              -
+              <a href="{{ path('park_show', {'slug': review.coaster.park.slug}) }}">
+                {{ review.coaster.park.name }}
+              </a>
+            </h6>
           </div>
+          
+          {% include 'Includes/_review_item.html.twig' with {'review': review} %}
         </li>
       {% else %}
+        <li class="text-center text-muted">
+          <i class="icon-comment-discussion position-left"></i>
           {{ 'review_list.no_review'|trans }}
+        </li>
       {% endfor %}
     </ul>
   </div>
