--- a/templates/Default/index.html.twig
+++ b/templates/Default/index.html.twig
@@ -147,8 +147,8 @@
                     </a>
                   </h6>
                 </div>
-                
-                {% include 'Includes/_review_item.html.twig' with {'review': review, 'compact': true} %}
+
+                {% include 'Includes/_review_item.html.twig' with {'review': review, 'compact': true, 'displayReviewsInAllLanguages': displayReviewsInAllLanguages} %}
               </li>
             {% endfor %}
           </ul>
