--- a/templates/Includes/list_reviews.html.twig
+++ b/templates/Includes/list_reviews.html.twig
@@ -26,8 +26,8 @@
               </a>
             </h6>
           </div>
-          
-          {% include 'Includes/_review_item.html.twig' with {'review': review} %}
+
+          {% include 'Includes/_review_item.html.twig' with {'review': review, 'displayReviewsInAllLanguages': displayReviewsInAllLanguages} %}
         </li>
       {% else %}
         <li class="text-center text-muted">
