--- a/templates/User/list_reviews.html.twig
+++ b/templates/User/list_reviews.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
   <div class="row">
-    {% include 'Includes/list_reviews.html.twig' with {'reviews': reviews} only %}
+    {% include 'Includes/list_reviews.html.twig' with {'reviews': reviews, 'displayReviewsInAllLanguages': true} only %}
   </div>
 
   {{ knp_pagination_render(reviews) }}
