--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,7 +40,7 @@
         <!-- page header -->
         {{ include(
           'page_header.html.twig',
-          {'title': title|default('Bienvenue !'), 'subTitle': subTitle|default(null)}
+          {'title': title|default('Bienvenue !'), 'subTitle': subTitle|default(null), 'secondaryTitle': secondaryTitle|default(null)}
         ) }}
         <!-- /page header -->
         <!-- Content area -->
