--- a/templates/page_header.html.twig
+++ b/templates/page_header.html.twig
@@ -1,7 +1,10 @@
 <div class="page-header page-header-default">
   <div class="page-header-content">
-    <div class="page-title{% if hideTitle|default(false) == true %} hidden-xs{% endif %}">
-      <h1>{{ title }}{% if subTitle %} • {{ subTitle }}{% endif %}</h1>
+    <div class="page-title row{% if hideTitle|default(false) == true %} hidden-xs{% endif %}">
+      <h1 class="col-sm-8 col-lg-9">{{ title }}{% if subTitle %} • {{ subTitle }}{% endif %}</h1>
+      {% if secondaryTitle %}
+         <h2 class="h6 col-sm-8 col-lg-9">{{ secondaryTitle }}</h2>
+      {% endif %}
     </div>
     <div class="heading-elements {% if showSearchBar|default(true) == true %}visible-elements{% endif %}">
       <form class="heading-form" action="#">
