#162 display reviews different languages (#163)
* [#162] - Fix user's reviews list template

* [#162] - Display reviews in different languages depending on a profile setting

* [#162] - CS Fixer

* [#162] - Update api-platform/core

* [#162] - Fix api-platform config

* [#162] - Fix parameters

* [#162] - Fix conditions

* [#162] - Fix function name

* [#162] - Fix getUser

* [#162] - Resolve conflicts with main

* [#165] - Remove order by score for reviews

---------

Co-authored-by: Florian Blond <florian.blond@gmail.com>

--- a/templates/Default/index.html.twig
+++ b/templates/Default/index.html.twig
@@ -147,8 +147,7 @@
                     </a>
                   </h6>
                 </div>
-
-                {% include 'Includes/_review_item.html.twig' with {'review': review, 'compact': true} %}
+                {% include 'Includes/_review_item.html.twig' with {'review': review, 'displayReviewsInAllLanguages': displayReviewsInAllLanguages} %}
               </li>
             {% endfor %}
           </ul>
