--- a/templates/Coaster/reviews-ajax.html.twig
+++ b/templates/Coaster/reviews-ajax.html.twig
@@ -17,14 +17,14 @@
                 </div>
             {% endif %}
             </h6>
-            
+
         </div>
 
         <div class="panel-body mt-5">
             <ul class="media-list media-list-bordered">
                 {% for review in reviews %}
                     <li class="media">
-                        {% include 'Includes/_review_item.html.twig' with {'review': review} %}
+                        {% include 'Includes/_review_item.html.twig' with {'review': review, 'displayReviewsInAllLanguages': displayReviewsInAllLanguages} %}
                     </li>
                 {% else %}
                     <li class="text-center text-muted">
