[#145+#186] - Continents translations in EasyAdmin

--- a/templates/ranking/filters.html.twig
+++ b/templates/ranking/filters.html.twig
@@ -13,7 +13,11 @@
               {% for continent in filtersForm.continent %}
                 <option value="{{ continent.id }}"
                         {% if qS.filters.continent is defined and qS.filters.continent == continent.id %}selected{% endif %}>
-                  {{ continent.name|trans({}, 'database') }}
+                        {% if continent.translations|length %}
+                          {{ continent.translations[app.request.locale].name }}
+                        {% else %}
+                          {{ continent.name|trans({}, 'database') }}
+                        {% endif %}
                 </option>
               {% endfor %}
             </select>
