--- a/templates/Profile/ratings.html.twig
+++ b/templates/Profile/ratings.html.twig
@@ -2,7 +2,7 @@
 
 {% import "helper.html.twig" as helper %}
 
-{% set title = 'users.my_ratings.title'|trans %}
+{% set title = 'profile.ratings.title'|trans %}
 {% block title %}{{ title }}{% endblock %}
 
 {% block stylesheets %}
