--- a/templates/User/show.html.twig
+++ b/templates/User/show.html.twig
@@ -70,7 +70,7 @@
           <!-- badges -->
           <div class="panel panel-flat">
             <div class="panel-heading">
-              <h3 class="panel-title">{{ 'me.badge'|trans }}</h3>
+              <h3 class="panel-title">{{ 'profile.badge'|trans }}</h3>
             </div>
 
             <div class="panel-body">
