--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -89,10 +89,10 @@
 
           <ul class="dropdown-menu dropdown-menu-right">
             <li>
-              <a href="{{ path('me') }}"><i class="icon-profile"></i> {{ 'navbar.profile'|trans }}</a>
+              <a href="{{ path('profile') }}"><i class="icon-profile"></i> {{ 'navbar.profile'|trans }}</a>
             </li>
             <li>
-              <a href="{{ path('me_ratings') }}">
+              <a href="{{ path('profile_ratings') }}">
                 <i class="icon-stars"></i> {{ 'navbar.rating'|trans }}
               </a>
             </li>
